# capora-boot-stub

./: .gitignore  Cargo.toml  README.md
boot-stub/: Cargo.toml
boot-stub/src/: configuration.rs  handler.s  lib.rs  load_application.rs  loader.rs  logging.rs  main.rs  mapper.rs  memory_map.rs  memory_structs.rs  paging.rs  spinlock.rs
boot-stub/src/arch/: mod.rs
boot-stub/src/arch/x86_64/: mod.rs
config/: Cargo.toml
config-raw/: Cargo.toml
config-raw/src/: lib.rs
config/src/: lib.rs
config/src/ctl/: cli.rs  main.rs
test-application/: Cargo.toml  build.rs  linker_script.ld
test-application/src/: main.rs
uefi-stub/: Cargo.toml
uefi-stub/src/: main.rs  pe.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
