[package]
name = "boot-stub"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
boot-api.workspace = true
config.workspace = true
elf = { git = "https://github.com/JarlEvanson/capora-elf.git", rev = "a5977e37a33d6c92146b2fb4b8d48ae4ca77a6f7" }
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git", rev = "9518cd1cbb19ba8e2165ee850ab2dfa319eb1a35" }
