[package]
name = "config"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "capora-boot-stub-ctl"
required-features = ["ctl"]
path = "src/ctl/main.rs"

[features]
ctl = ["dep:clap"]

[lints]
workspace = true

[dependencies]
config-raw.workspace = true

clap = { workspace = true, optional = true }
